# kurento-media-server

./: .build.yaml  .gitignore  .gitmodules  .gitreview  CHANGELOG.md  CMakeLists.txt  CREDITS  ChangeLog.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  config.h.cmake  entrypoint.sh  healthchecker.sh  kms.conf  kmsc-endpoints.kdev4  kurento-media-server.conf  kurento.conf  kurento.conf.info  kurento.conf.ini  kurento.conf.json  license.txt  main.c  pattern.sdp  sdp_pattern.txt  valgrind.supp  version.yml
httpepserver/: CMakeLists.txt  KmsHttpEPServer.cpp  KmsHttpEPServer.h  KmsHttpLoop.cpp  KmsHttpLoop.h  KmsHttpPost.cpp  KmsHttpPost.h  kms-marshal.list  kmshttpendpointaction.h
jsonrpc/: CMakeLists.txt  JsonRpcConstants.hpp  JsonRpcException.hpp  JsonRpcHandler.cpp  JsonRpcHandler.hpp  JsonRpcUtils.cpp  JsonRpcUtils.hpp  JsonSerializer.hpp
modules/: CMakeLists.txt  example.cpp
modules/chroma/: CMakeLists.txt  ChromaModule.cpp
modules/faceoverlay/: CMakeLists.txt  FaceOverlayFilter.hpp  FaceOverlayModule.cpp
modules/gstreamer/: CMakeLists.txt  GStreamerModule.cpp
modules/httpget/: CMakeLists.txt  HttpGetEndPoint.cpp  HttpGetModule.cpp
modules/httppost/: CMakeLists.txt  HttpPostEndPoint.hpp  HttpPostModule.cpp
modules/jackvader/: CMakeLists.txt  JackVaderFilter.cpp  JackVaderFilter.hpp  JackVaderModule.cpp
modules/platedetector/: CMakeLists.txt  PlateDetectorModule.cpp
modules/player/: CMakeLists.txt  PlayerModule.cpp
modules/pointerdetector/: CMakeLists.txt  PointerDetectorFilter.cpp  PointerDetectorModule.cpp
modules/pointerdetector2/: CMakeLists.txt  PointerDetector2Module.cpp
modules/recorder/: CMakeLists.txt  RecorderModule.cpp
modules/rtp/: CMakeLists.txt  RtpModule.cpp
modules/webrtc/: CMakeLists.txt  WebRtcEndPoint.hpp  WebRtcModule.cpp
modules/zbar/: CMakeLists.txt  ZBarFilter.hpp  ZBarModule.cpp
scaffold/: CMakeLists.txt  CMakeLists_gstplugin.txt.template  CMakeLists_plugin.txt.template  CMakeLists_root.txt.gstreamer.template  CMakeLists_root.txt.opencv.template  CMakeLists_root.txt.template  CMakeLists_server.txt.template  CMakeLists_server_plugin.txt.template  CMakeLists_src.txt.template  Gruntfile.js.template  changelog.template  config.h.cmake.template  control.template  debian-changelog.template  debian-control.gstreamer.template  debian-control.opencv.template  debian-control.template  debian-copyright.template  debian-name-dev.install.template  debian-name.install.gstreamer.template  debian-name.install.opencv.template  debian-name.install.template  debian-rules.template  filter.Filter.kmd.json.template  filter.kmd.json.template  gstplugin.c.template  gstplugin.cpp.template  gstplugin.h.template  kurento-module-scaffold  kurento-module-scaffold.sh  name-dev.install.template  name.install.OpenCV.template  name.install.template  plugin.c.template  rules.template
server/: CMakeLists.txt  CacheEntry.cpp  CacheEntry.hpp  EventHandler.cpp  EventHandler.hpp  MediaServerServiceHandler.cpp  MediaServerServiceHandler.h  MediaServerServiceHandler.hpp  ModuleLoader.cpp  ModuleLoader.hpp  ObjectRegistrar.cpp  ObjectRegistrar.hpp  RequestCache.cpp  RequestCache.hpp  ResourceManager.cpp  ResourceManager.hpp  ServerMethods.cpp  ServerMethods.hpp  death_handler.cpp  death_handler.hpp  dtlsfix.cpp  httpendpointserver.hpp  loadConfig.cpp  loadConfig.hpp  log.cpp  log.h  log.hpp  logging.cpp  logging.hpp  main.cpp  media_config.hpp  media_config_loader.cpp  media_config_loader.h  media_config_loader.hpp  module.hpp  modules.cpp  modules.hpp  utils.cpp  utils.h  version.cpp  (+2 more)
server/common/: CacheEntry.cpp  CacheEntry.hpp  ConcurrentMap.hpp  MediaSet.cpp  MediaSet.hpp  Operators.cpp  RequestCache.cpp  RequestCache.hpp
server/handlers/: JoinableServiceHandler.cpp  JoinableServiceHandler.h  MediaServiceHandler.cpp  MediaServiceHandler.h  MediaSessionServiceHandler.cpp  MediaSessionServiceHandler.h  MixerServiceHandler.cpp  MixerServiceHandler.h  NetworkConnectionServiceHandler.cpp  NetworkConnectionServiceHandler.h
server/managers/: MediaSessionManager.cpp  MediaSessionManager.h  MixerManager.cpp  MixerManager.h  NetworkConnectionManager.cpp  NetworkConnectionManager.h
server/services/: HttpEndPointServer.cpp  HttpEndPointServer.hpp  HttpService.cpp  HttpService.hpp  RabbitMQConnection.cpp  RabbitMQConnection.hpp  RabbitMQEventHandler.cpp  RabbitMQEventHandler.hpp  RabbitMQListener.cpp  RabbitMQListener.hpp  RabbitMQPipeline.cpp  RabbitMQPipeline.hpp  RabbitMQService.cpp  RabbitMQService.hpp  Service.cpp  Service.hpp  ServiceFactory.cpp  ServiceFactory.hpp  ThriftEventHandler.cpp  ThriftEventHandler.hpp  ThriftService.cpp  ThriftService.hpp  ThriftServiceHandler.cpp  ThriftServiceHandler.hpp
server/signalHandler/: CMakeLists.txt
server/transport/: CMakeLists.txt  Processor.hpp  RabbitMQConnection.hpp  RabbitMQEventHandler.cpp  RabbitMQPipeline.cpp  RabbitMQPipeline.hpp  RabbitMQTransport.cpp  RabbitMQTransport.hpp  ThriftEventHandler.hpp  ThriftTransport.cpp  ThriftTransport.hpp  ThriftTransportHandler.cpp  ThriftTransportHandler.hpp  (+3 more)
src/: CMakeLists.txt  connection.c  connection.h  kms-connection.c  kms-connection.h  kms-endpoint.c  kms-endpoint.h  kms-local-connection.c  kms-local-connection.h  kms-media-handler-factory.c  kms-media-handler-factory.h  kms-media-handler-manager.c  kms-media-handler-manager.h  kms-media-handler-sink.c  kms-media-handler-src.c  kms-media-handler-src.h
test/: BaseTest.cpp  BaseTest.hpp  CMakeLists.txt  HandlerTest.cpp  HandlerTest.hpp  config_read_test.cpp  http_ep_server_test.cpp  main.c  media_handler_test.cpp  memory.c  memory.cpp  memory.h  memory.hpp  registrar_test.cpp  resources_limit_test.cpp  sdp_end_point_test.cpp  server_duplicate_requests.cpp  server_events_test.cpp  server_json_session.cpp  server_json_test.cpp  server_memory_test.cpp  server_test.cpp  server_test_base.cpp  server_test_base.hpp  server_unexpected_test.cpp  testCertificate.pem  test_ice.cpp  test_mixer.c  test_rtmp.c  test_rtp.c  test_rtp_connection.c  test_rtp_transmission.c  test_sdp.c  test_server.cpp  utils_test.cpp
(+404 files in other folders)
